force-app/main/default/objects/passport1__c/passport1__c.object-meta.xml
<CustomObject>
    <label>passport1</label>
    <nameField>
        <displayFormat>pass1-{000000}</displayFormat>
        <label>passport1 id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>passports1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>