force-app/main/default/objects/passport1__c/fields/applicant_full_name__c.field-meta.xml
<CustomField>
    <fullName>applicant_full_name__c</fullName>
    <formula>applicant__r.first_name__c+&apos; &apos;+ applicant__r.last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>applicant full name</label>
    <type>Text</type>
</CustomField>