force-app/main/default/objects/passport1__c/fields/applicant_pan_card__c.field-meta.xml
<CustomField>
    <fullName>applicant_pan_card__c</fullName>
    <formula>IF( applicant__r.police_varification__c ,  applicant__r.pan_card__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>applicant  pan card</label>
    <type>Text</type>
</CustomField>