force-app/main/default/objects/passport1__c/fields/passport_number__c.field-meta.xml
<CustomField>
    <fullName>passport_number__c</fullName>
    <label>passport number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>