force-app/main/default/objects/passport1__c/fields/satus__c.field-meta.xml
<CustomField>
    <fullName>satus__c</fullName>
    <label>satus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>in progress</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>dispatched</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>re-issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>