force-app/main/default/objects/passport1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>expairy_date__c</columns>
    <columns>satus__c</columns>
    <columns>applicant__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>